<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:padding="6dp"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/widgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/installments_widget__no_fees"
        android:textSize="@dimen/installments_widget__title_text_size"
        android:textColor="@color/widget__title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--  Block 1  -->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/q1icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/installments_widget__title_bottom_gap"
        android:src="@drawable/ic_ellipse_q1"
        android:tint="@color/widget__quarter_tint"
        app:layout_constraintStart_toStartOf="@id/block1"
        app:layout_constraintEnd_toEndOf="@id/block1"
        app:layout_constraintTop_toBottomOf="@id/widgetTitle"
        />

    <LinearLayout
        android:id="@+id/block1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/widgetTitle"
        app:layout_constraintEnd_toStartOf="@id/block2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/q1icon"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/q1amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/installments_widget__icon_amount_gap"
            android:textColor="@color/widget__quarter_sum"
            android:textSize="@dimen/installments_widget__quarter_sum_text_size"
            android:textStyle="bold"
            tools:text="150.00 AED"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/q1period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/installments_widget__amount_period_gap"
            android:text="@string/installments_widget__q1_period"
            android:textColor="@color/widget__quarter_period"
            android:textSize="@dimen/installments_widget__quarter_period_text_size"
            />

    </LinearLayout>


    <!--  Block 2  -->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/q2icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/installments_widget__title_bottom_gap"
        android:src="@drawable/ic_ellipse_q2"
        android:tint="@color/widget__quarter_tint"
        app:layout_constraintStart_toStartOf="@id/block2"
        app:layout_constraintEnd_toEndOf="@id/block2"
        app:layout_constraintTop_toBottomOf="@id/widgetTitle"
        />

    <LinearLayout
        android:id="@+id/block2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/block1"
        app:layout_constraintEnd_toStartOf="@id/block3"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/q2icon"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/q2amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/installments_widget__icon_amount_gap"
            android:textColor="@color/widget__quarter_sum"
            android:textSize="@dimen/installments_widget__quarter_sum_text_size"
            android:textStyle="bold"
            tools:text="150.00 AED"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/q2period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/installments_widget__amount_period_gap"
            android:text="@string/installments_widget__q2_period"
            android:textColor="@color/widget__quarter_period"
            android:textSize="@dimen/installments_widget__quarter_period_text_size"
            />

    </LinearLayout>

    <!--  Block 3  -->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/q3icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/installments_widget__title_bottom_gap"
        android:src="@drawable/ic_ellipse_q3"
        android:tint="@color/widget__quarter_tint"
        app:layout_constraintStart_toStartOf="@id/block3"
        app:layout_constraintEnd_toEndOf="@id/block3"
        app:layout_constraintTop_toBottomOf="@id/widgetTitle"
        />

    <LinearLayout
        android:id="@+id/block3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/block2"
        app:layout_constraintEnd_toStartOf="@id/block4"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/q3icon"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/q3amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/installments_widget__icon_amount_gap"
            android:textColor="@color/widget__quarter_sum"
            android:textSize="@dimen/installments_widget__quarter_sum_text_size"
            android:textStyle="bold"
            tools:text="150.00 AED"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/q3period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/installments_widget__amount_period_gap"
            android:text="@string/installments_widget__q3_period"
            android:textColor="@color/widget__quarter_period"
            android:textSize="@dimen/installments_widget__quarter_period_text_size"
            />

    </LinearLayout>

    <!--  Block 4  -->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/q4icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/installments_widget__title_bottom_gap"
        android:src="@drawable/ic_ellipse_q4"
        android:tint="@color/widget__quarter_tint"
        app:layout_constraintStart_toStartOf="@id/block4"
        app:layout_constraintEnd_toEndOf="@id/block4"
        app:layout_constraintTop_toBottomOf="@id/widgetTitle"
        />

    <LinearLayout
        android:id="@+id/block4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/block3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/q4icon"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/q4amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/installments_widget__icon_amount_gap"
            android:textColor="@color/widget__quarter_sum"
            android:textSize="@dimen/installments_widget__quarter_sum_text_size"
            android:textStyle="bold"
            tools:text="150.00 AED"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/q4period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/installments_widget__amount_period_gap"
            android:text="@string/installments_widget__q4_period"
            android:textColor="@color/widget__quarter_period"
            android:textSize="@dimen/installments_widget__quarter_period_text_size"
            />

    </LinearLayout>

    <!--  Connections  -->

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/widget__connection_line"
        app:layout_constraintStart_toEndOf="@id/q1icon"
        app:layout_constraintEnd_toStartOf="@id/q2icon"
        app:layout_constraintTop_toTopOf="@id/q1icon"
        app:layout_constraintBottom_toBottomOf="@id/q1icon"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/widget__connection_line"
        app:layout_constraintStart_toEndOf="@id/q2icon"
        app:layout_constraintEnd_toStartOf="@id/q3icon"
        app:layout_constraintTop_toTopOf="@id/q2icon"
        app:layout_constraintBottom_toBottomOf="@id/q2icon"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/widget__connection_line"
        app:layout_constraintStart_toEndOf="@id/q3icon"
        app:layout_constraintEnd_toStartOf="@id/q4icon"
        app:layout_constraintTop_toTopOf="@id/q3icon"
        app:layout_constraintBottom_toBottomOf="@id/q3icon"
        />

</merge>